examples/test/testpolicy8465.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8465
  namespace: namespace110
spec:
  podSelector:
    matchLabels:
      key32: value46
      key1: value23
      key16: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value36
          key8: value31
      podSelector:
        matchLabels:
          key32: value9
          key1: value17
          key12: value38
